<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity"
    android:background="#ffff99"
    android:orientation="vertical">


    <TextView
        android:id="@+id/editText_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="Welcome to Fast Turtle's rental system"
        android:textColor="#656600"
        android:textSize="50dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="   REGISTER   "
        android:textSize="30dp"
        android:background="#dd99ff"
        android:textColor="#440066"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="200dp" />
    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="      LOG IN      "
        android:textSize="30dp"
        android:background="#dd99ff"
        android:textColor="#440066"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />


</LinearLayout>
