<resources>
    <string name="app_name">Rental-Centre-APP</string>
    <string name="log_in">Log in</string>
</resources>